Tests for export error handling.